ola-parser/src/testdata/syntaxTests/parsing/mapping_nonelementary_key_4.sol
contract c {
	mapping(string[] => u256) data;
}
// ----
// ParserError 2314: (28-29): Expected '=>' but got '['
